@@ -7,14 +7,14 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	4.60 (gritter) 10/13/05";
+	"@(#)/usr/ucb/otfdump.sl	4.61 (gritter) 10/13/05";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  4.60 (gritter) 10/13/05";
-const char creator[] = "Heirloom Documentation Tools - dpost 4.60 (gritter) 10/13/05";
+static const char sccsid[] USED = "@(#)dpost.sl  4.61 (gritter) 10/13/05";
+const char creator[] = "Heirloom Documentation Tools - dpost 4.61 (gritter) 10/13/05";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	4.60 (gritter) 10/13/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	4.61 (gritter) 10/13/05";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	4.60 (gritter) 10/13/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	4.61 (gritter) 10/13/05";
 #endif	/* !DUMP, !NROFF */
 /* SLIST */
 /*
@@ -44,7 +44,7 @@ troff.d/afm.h: * Sccsid @(#)afm.h	1.16 (gritter) 10/2/05
 troff.d/dev.h: * Sccsid @(#)dev.h	1.8 (gritter) 9/30/05
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.10 (gritter) 9/8/05
-troff.d/otf.c: * Sccsid @(#)otf.c	1.29 (gritter) 10/13/05
+troff.d/otf.c: * Sccsid @(#)otf.c	1.30 (gritter) 10/13/05
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.10 (gritter) 10/13/05
 troff.d/proto.h: * Sccsid @(#)proto.h	1.30 (gritter) 9/30/05
 troff.d/t10.c: * Sccsid @(#)t10.c	1.50 (gritter) 10/3/05
